# spherex_sim

./: .spherex.world.swp  CMakeLists.txt  lidar_plugin.cc  run.sh  spherex.world  spherex_plugin.bak.cc  spherex_plugin.cc  spherex_world.launch  vel.cc
models/itokawa/: model.config  model.sdf
models/spherex/: .model.sdf.swp  model.config  model.sdf  spherex.dae  spherex_bot.dae  spherex_mid.dae  spherex_top.dae
models/tube/: model.config  model.sdf  poisson.dae  poisson_bot.dae  poisson_bot.stl  poisson_bot_thick.stl  poisson_top.dae  tube.dae  tube_bot.dae  tube_top.dae
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
spherex_sim/: spherex_sim.cbp
